[gd_scene load_steps=9 format=3 uid="uid://dd3yb0gkhhiur"]

[ext_resource type="Script" uid="uid://bv6s3shxbair" path="res://game/menus/stagemusicselect/StageMusicSelect.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bb1ay2q3kixt1" path="res://game/assets/sprites/UI/CharacterSelect/Cursors/BigP1/Timeline 1_0000.png" id="3"]
[ext_resource type="Texture2D" uid="uid://ba6f4fx263cmu" path="res://game/assets/sprites/UI/CharacterSelect/Cursors/BigP2/Timeline 1_0000.png" id="4"]
[ext_resource type="Texture2D" uid="uid://ci4mdgte7e83k" path="res://game/assets/sprites/UI/MainMenus/MenuTutorials/OKAttack.png" id="5"]
[ext_resource type="Texture2D" uid="uid://djahwkdvu1cpx" path="res://game/assets/sprites/UI/MainMenus/MenuTutorials/ControllerPick.png" id="6"]
[ext_resource type="Material" uid="uid://cffvtcw31hg4s" path="res://game/assets/shaders/EarthBoundV2.tres" id="7"]
[ext_resource type="Texture2D" uid="uid://cxu43ttytxp1o" path="res://game/assets/sprites/UI/MainMenus/TrainingScreen.png" id="8"]
[ext_resource type="Texture2D" uid="uid://c0dq57i5er86o" path="res://game/assets/sprites/UI/IntroShutters.png" id="9"]

[node name="StageMusicSelect" type="Node2D"]
script = ExtResource("1")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BGMLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -540.0
offset_top = 46.0
offset_right = -69.0
offset_bottom = 176.0
grow_horizontal = 2
scale = Vector2(2.57381, 2.70362)
text = "BGM: "

[node name="StageLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -535.0
offset_top = 483.0
offset_right = -64.0
offset_bottom = 613.0
grow_horizontal = 2
scale = Vector2(2.66899, 2.72905)
text = "STAGE: "

[node name="Background" type="Sprite2D" parent="."]
material = ExtResource("7")
position = Vector2(960, 540)
texture = ExtResource("8")

[node name="Background2" type="Sprite2D" parent="."]
modulate = Color(0.184314, 0.184314, 0.203922, 0.517647)
position = Vector2(960, 540)
texture = ExtResource("9")

[node name="ChooseSide" type="Sprite2D" parent="."]
visible = false
position = Vector2(937, 1035)
scale = Vector2(1.767, 1.767)
texture = ExtResource("6")

[node name="A OK" type="Sprite2D" parent="."]
position = Vector2(1365, 1035)
scale = Vector2(1.37597, 1.37597)
texture = ExtResource("5")

[node name="P1Side" type="Sprite2D" parent="."]
position = Vector2(359, 124)
texture = ExtResource("3")

[node name="P2Side" type="Sprite2D" parent="."]
position = Vector2(1438, 124)
texture = ExtResource("4")
